Fix indenting removes characters if line has tabs at start

BUG: 468495